WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220602
REGRESSION (
r266634
): Messages crashes sometimes while scrolling around and playing YouTube videos
https://bugs.webkit.org/show_bug.cgi?id=220602
Summary
REGRESSION (r266634): Messages crashes sometimes while scrolling around and p...
Tim Horton
Reported
2021-01-13 14:06:04 PST
REGRESSION (
r266634
): Messages crashes sometimes while scrolling around and playing YouTube videos
Attachments
Patch
(3.05 KB, patch)
2021-01-13 14:06 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(5.55 KB, patch)
2021-01-13 17:58 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2021-01-13 14:06:22 PST
Created
attachment 417563
[details]
Patch
Tim Horton
Comment 2
2021-01-13 14:06:24 PST
<
rdar://problem/70402593
>
Tim Horton
Comment 3
2021-01-13 17:58:57 PST
Created
attachment 417590
[details]
Patch
Wenson Hsieh
Comment 4
2021-01-13 18:00:54 PST
Comment on
attachment 417590
[details]
Patch r=mews
EWS
Comment 5
2021-01-13 22:31:26 PST
Committed
r271479
: <
https://trac.webkit.org/changeset/271479
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 417590
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug